--- a/move_dialog.ui
+++ b/move_dialog.ui
@@ -96,7 +96,7 @@
       <item row="1" column="0">
        <widget class="QLabel" name="label_4">
         <property name="text">
-         <string>Wheel Radius (inches)</string>
+         <string>Wheel Diameter (inches)</string>
         </property>
        </widget>
       </item>
